Перед переделкой для меню и разборок с версиями кути

--- a/ios/Info.plist
+++ b/ios/Info.plist
@@ -5,6 +5,12 @@
     <key>CFBundleDisplayName</key>
     <string>${PRODUCT_NAME}</string>
 
+    <!-- Разрешение доступа к буферу обмена -->
+    <key>UIPasteboardOptionLocalOnly</key>
+    <true/>
+    <key>UIPasteboardOptionExpirationDate</key>
+    <date>2100-01-01T00:00:00Z</date>
+
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
 
